- fix view-all-users.html