@@ -1,7 +1,6 @@
 package com.team4.leaveprocessingsystem.controller.admin;
 
-import com.team4.leaveprocessingsystem.model.Employee;
-import com.team4.leaveprocessingsystem.model.User;
+import com.team4.leaveprocessingsystem.model.*;
 import com.team4.leaveprocessingsystem.model.enums.RoleEnum;
 import com.team4.leaveprocessingsystem.service.*;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -9,6 +8,7 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 
@@ -54,20 +54,27 @@ public class ManageUserController {
             users = userService.findAll();
         } else {
             if (searchType == null || searchType.isEmpty()) {
-                searchType = "name";
+                searchType = "username";
             }
 
             users = switch (searchType) {
-                case "employeeid" -> {
+                case "userid" -> {
                     try {
-                        int employeeId = Integer.parseInt(query);
-                        yield userService.findByEmployeeId(employeeId);
+                        int userId = Integer.parseInt(query);
+                        User user = userService.findById(userId);
+                        yield user != null ? Collections.singletonList(user) : Collections.emptyList();
                     } catch (NumberFormatException e) {
                         yield Collections.emptyList(); // or handle the error as needed
                     }
                 }
-                case "email" -> List.of(userService.findByEmail(query));
-                case "username" -> List.of(userService.findByUsername(query));
+                case "email" -> {
+                    User user = userService.findByEmail(query);
+                    yield user != null ? Collections.singletonList(user) : Collections.emptyList();
+                }
+                case "username" -> {
+                    User user = userService.findByUsername(query);
+                    yield user != null ? Collections.singletonList(user) : Collections.emptyList();
+                }
                 case "role" -> userService.findByRole(RoleEnum.valueOf(query.toUpperCase()));
                 default -> userService.findAll();
             };
@@ -76,8 +83,34 @@ public class ManageUserController {
         model.addAttribute("users", users);
         model.addAttribute("query", query);
         model.addAttribute("searchType", searchType);
-        return "admin/manage-staff/view-all-users";
+        return "admin/manage-user/view-all-users";
     }
 
+    /* ----------------------------------------- USERS ------------------------------------------------------------*/
+    @GetMapping("/edit/{employeeId}")
+    public String editUserDetails(@PathVariable(name = "employeeId") int employeeId, Model model) {
+        // Fetch the employee by ID
+        Employee employee = employeeService.findEmployeeById(employeeId);
+
+        // Fetch the user's details associated with the employee
+        List<User> existingUsers = userService.findByEmployeeId(employeeId);
+
+        // If there are multiple users, you might need to handle this differently
+        User user = existingUsers.isEmpty() ? new User() : existingUsers.get(0);
+
+        // Fetch roles (assuming you have an enum for roles)
+        List<RoleEnum> roles = List.of(RoleEnum.values());
+
+        // Add attributes to the model
+        model.addAttribute("user", user);
+        model.addAttribute("employee", employee);
+        model.addAttribute("existingUsers", existingUsers);
+        model.addAttribute("roles", roles);
+        model.addAttribute("isEditMode", true);
+        model.addAttribute("updateSuccess", false);
+
+        // Return the Thymeleaf template
+        return "admin/manage-user/edit-user-details-form";
+    }
 
 }
